Get roles for access principal. Closes #115.
